  - Instead of showing 'multi' in gray of multiple selection was
    disabled, and in black if it was enabled, the display now
    alternates between 'multi' and 'single'
  - Same for the overwrite status; it now shows 'ins' or 'ovr'
  - I/O progress display replaced with a Java heap memory indicator
  - I/O status is now shown in the message area of the status bar
- New splash screen (Kris Kopicki)
- New color scheme
- Pressing Tab while a selection is active shifts it right by one level
  of indent
- Pressing S+Tab shifts the selection right by one level of indent
- If a selection ends at the beginning of a line, that line is no longer
  considered to be part of the selection by line manipulation commands
- Improved window docking feature:
  - 'Auto open' setting in Docking option pane removed, now jEdit
    remembers which dockables were open automatically
- Improved HyperSearch results window
- In the Shortcuts option pane, each plugin's actions are shown in a
  separate section. This solves the problem of plugin actions having
  ambiguous names (for example, "Edit Settings"). This change is the
  reason for the jEdit.addAction() method was dropped.
- Macros.message(), Macros.error() and Macros.input() methods now accept
  an arbitriary java.awt.Component, instead of a View, as the component
  that will parent the dialog box. This will not break any macros since
  BeanShell resolves methods at run-time.
- Improved window docking:
  - Windows docked into the view now have close boxes

+ Bug Fixes

- 'Recent Files' menu behaved in a strange manner if there were no
  recent files
- Fixed a NullPointerException if the 'Narrow to Selection' command
  was invoked with no selection
- JCheckBoxList typo prevented it from working in the XML plugin
- On MacOS, the option key, which is reported as ALT, can be used to
  generate user input, but jEdit ignored Alt key strokes that were not
  bound to shortcuts.
- More JDK 1.4 key event bug workarounds